# kisaragi-zero

./: .gitignore  Cargo.toml  README.md  example-config.toml
.github/workflows/: build.yaml
src/: config.rs  main.rs  sdapi.rs
src/commands/: dream.rs  emoji.rs  hello.rs  mod.rs  roll.rs
