[package]
name = "kisaragi-zero-rusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
base64 = "0.21.0"
chrono = "0.4.23"
once_cell = "1.17.1"
rand = "0.8.5"
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serenity = { version = "0.11.5", default-features = false, features = [
  "client",
  # "collector",
  "gateway",
  "rustls_backend",
  "model",
  # "unstable_discord_api"
] }
# slashies = "0.1.3"
# slashies-macros = "0.1.3"
slashies = { path = "../slashies/slashies" }
slashies-macros = { path = "../slashies/slashies-macros" }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
toml = "0.7.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[profile.release]
debug = true
